changed sroll custom

--- a/frontend-review-sender/src/styles/variables.css
+++ b/frontend-review-sender/src/styles/variables.css
@@ -14,7 +14,7 @@
   --color-btn-disabled: #4b5563;
   --color-btn-active: #22c55e;
 
-  --color-modal-overlay: rgba(0, 0, 0, 0.85); /* Затемнение фона */
+  --color-modal-overlay: rgba(0, 0, 0, 0.85);
   --color-text-accent: #38bdf8;
 
   --color-star-default: #4b5563;
