--- a/frontend-reviews-table/src/index.css
+++ b/frontend-reviews-table/src/index.css
@@ -11,17 +11,29 @@
 @theme {
   --font-sans: "Bricolage", sans-serif;
   --color-gray-900: #111827;
-  --spacing-row: 6.25rem;
+  --height-row: 6.25rem;
 }
 
-/* input,
-button,
-textarea,
-select {
-  font-family: var(--font-sans);
+@layer utilities {
+  .scrollbar-custom {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(71 85 105) transparent;
+  }
 
-  background-color: var(--color-gray-900);
-  color: white;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-} */
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: rgb(71 85 105);
+    border-radius: 4px;
+  }
+
+  .h-row {
+    height: var(--height-row);
+  }
+}
